# SparseConvolution

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  main.cpp  test.cpp
data/: data_0.05.txt  data_0.1.txt  data_0.2.txt  data_001.txt  data_trans_0.2.txt  data_trans_001.txt  data_trans_005.txt  data_trans_01.txt  genotype_data.txt  sparse_10.txt
src/: benchmark.cpp  benchmark.hpp  compare_result.cpp  dense_convolution.cpp  file_input.cpp  file_input.hpp  general_data.hpp  general_sparse.cpp  generate_data.cpp  genotype_data.hpp  sparse_convolution.cpp  test.cpp  vcf_input.cpp  vcf_input.hpp
src/convolutions/: dense_convolution.cpp  dense_convolution.hpp  general_sparse.cpp  general_sparse.hpp  sparse_convolution.cpp  sparse_convolution.hpp
src/data_handling/: file_input.hpp  generate_data.cpp  generate_data.hpp  genotype_data.hpp
src/testing/: benchmark.cpp  benchmark.hpp  test.cpp  test.hpp
